# gpu-arena

./: LICENSE  README.md  benchmark.py  readme.rst
AcceleratedKernels.jl/: readme.md
AcceleratedKernels.jl/Project/: Project.toml
AcceleratedKernels.jl/Project/src/: Project.jl
bend/: readme.md
cpu/: CMakeLists.txt  cpu.cpp  readme.md
cpu/cpp/: CMakeLists.txt  cpu.cpp  task1.hpp  task2.hpp  task3.hpp
cpu/rust/: Cargo.toml
cpu/rust/src/: task2.rs  task3.rs
cpu/src/: main.rs  task1.rs  task2.rs  task3.rs
cuda/: main.cu  readme.md
directx/: readme.md
directx/computing/: CMakeLists.txt  main.cpp  sum.hlsl
directx/graphics/: CMakeLists.txt  main.cpp
metal/: readme.md
opencl/: Cargo.toml  readme.md
opencl/src/: main.rs  test_kernel.cl
opengl/: readme.md
opengl/computing/: CMakeLists.txt  main.cpp  readme.md
opengl/graphics/: .gitignore  CMakeLists.txt  main.cpp
opengl/graphics/include/: glad.h
opengl/graphics/src/: glad.c
openmp/: CMakeLists.txt  openmp.cpp  readme.md
sycl/: main.cpp  readme.md
triton/: main.py  readme.md
triton-py/: main.py  pyproject.toml  readme.md
vulkan/: readme.md
vulkan/compute/: .gitignore  CMakeLists.txt  compute.py  main.cpp  shader.comp
vulkan/graphics/: CMakeLists.txt  main.cpp  shader.frag
webgpu/: readme.md
webgpu/compute/: Cargo.toml
webgpu/compute/src/: main.rs  shader.wgsl
webgpu/graphics/: Cargo.toml
webgpu/graphics/src/: main.rs  shader.wgsl
